This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
* Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
  The increasing number of translations had reduced the usability of the menu
* Updated Little CMS to v2.6 (git 4da8703)
* Updated Unrar to v5.1.4
* Updated LAV Filters to v0.61.2.6:
    - Ticket #3575, LAV Splitter: Alternate audio support for HLS
    - LAV Video: Support VP7 video
    - LAV Video: Use the MediaFondation WMV decoder on Windows 7+ instead of the DMO WMV decoder
* Don't use auto-zoom feature when the window was positioned using the Aero Snap
! The dockable bars were not updated when changing the UI language
! Statusbar: Fixed occasional flickering of text and media type icon
! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled
! Ticket #1411, Internal Subtitle Renderer/VSFilter: Support loading external PGS subtitles
! Ticket #1574/#4171, ISR: Subtitle positioning was wrong when using default style override
! Ticket #2244, ISR: Changes in subresync bar were lost after changing style
! Ticket #2671, VSFilter: Video frames were not marked as interlaced
! Ticket #3701, Subtitle outline was too thick when using default style override
! Ticket #4284, Auto-zoom feature didn't work properly when the taskbar was docked at the left or the top of the screen
! Ticket #4288, Changing the zoom level when in fullscreen mode did nothing
! Ticket #4299, Frame stepping was not working for DVD


1.7.5 - 01 May 2014
===================
* Updated Catalan, Croatian, Dutch, German, Japanese, Slovenian, Spanish, Ukrainian and Vietnamese translations