@@ -11,6 +11,7 @@ Legend:
 next version - not released yet
 ===============================
 + ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
++ VSFilter: Display more informative names for external subtitles (similar to what is done with the internal subtitle renderer)
 * Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
   The increasing number of translations had reduced the usability of the menu
 * Updated Little CMS to v2.6 (git 4da8703)
